Fixing modal window footer overlapping issue

--- a/src/css/awinTheme.css
+++ b/src/css/awinTheme.css
@@ -8736,6 +8736,7 @@ button.ui-dialog-titlebar-close {
     border-top: 1px solid #ebebeb;
     background-color: #f4f4f4;
     padding: 10px 20px;
+    clear: both;
 }
 .modal-footer .btn + .btn {
     margin-left: 5px;
